Random cleanup, especially of OpenLegEnvironment and Daybreaks.