@@ -1,8 +1,8 @@
 package gov.nysenate.openleg.spotchecks.model;
 
 import com.google.common.collect.ImmutableMap;
-import gov.nysenate.openleg.notifications.model.NotificationType;
 import gov.nysenate.openleg.common.util.OutputUtils;
+import gov.nysenate.openleg.notifications.model.NotificationType;
 
 import java.util.Arrays;
 import java.util.EnumSet;
@@ -36,24 +36,22 @@ public enum SpotCheckRefType
 
     SENATE_SITE_LAW("senate-site-law", "NYSenate.gov Law", NYSENATE, LAW, SENSITE_LAW_SPOTCHECK),
 
-    OPENLEG_BILL ("openleg-bill", "Openleg Bill", OPENLEG, BILL,OPENLEG_SPOTCHECK),
+    OPENLEG_BILL ("openleg-bill", "Openleg Bill", OPENLEG, BILL, OPENLEG_SPOTCHECK),
 
-    OPENLEG_CAL ("openleg-cal", "Openleg Cal", OPENLEG, CALENDAR ,OPENLEG_SPOTCHECK),
+    OPENLEG_CAL ("openleg-cal", "Openleg Cal", OPENLEG, CALENDAR, OPENLEG_SPOTCHECK),
 
-    OPENLEG_AGENDA ("openleg-agenda", "Openleg Agenda", OPENLEG, AGENDA ,OPENLEG_SPOTCHECK),
+    OPENLEG_AGENDA ("openleg-agenda", "Openleg Agenda", OPENLEG, AGENDA, OPENLEG_SPOTCHECK),
     ;
 
-    private String refName;
-    private String displayName;
-
-    private SpotCheckDataSource dataSource;
-    private SpotCheckContentType contentType;
-
+    private final String refName;
+    private final String displayName;
+    private final SpotCheckDataSource dataSource;
+    private final SpotCheckContentType contentType;
     /** A notification type that is used to send notifications for this type of report */
-    private NotificationType notificationType;
+    private final NotificationType notificationType;
 
-    SpotCheckRefType(String refName, String displayName,
-                     SpotCheckDataSource dataSource, SpotCheckContentType contentType, NotificationType type) {
+    SpotCheckRefType(String refName, String displayName, SpotCheckDataSource dataSource,
+                     SpotCheckContentType contentType, NotificationType type) {
         this.refName = refName;
         this.displayName = displayName;
         this.dataSource = dataSource;
@@ -90,7 +88,7 @@ public enum SpotCheckRefType
     }
 
     private static final ImmutableMap<String, SpotCheckRefType> refNameMap = ImmutableMap.copyOf(
-            Arrays.asList(SpotCheckRefType.values()).stream()
+            Arrays.stream(SpotCheckRefType.values())
                     .collect(Collectors.toMap(SpotCheckRefType::getRefName, Function.identity()))
     );
 
@@ -98,34 +96,32 @@ public enum SpotCheckRefType
         return refNameMap.get(refName);
     }
 
-    public static List<SpotCheckRefType> get(SpotCheckDataSource dataSource, SpotCheckContentType contentType){
+    public static List<SpotCheckRefType> get(SpotCheckDataSource dataSource,
+                                             SpotCheckContentType contentType) {
         return Arrays.stream(SpotCheckRefType.values())
-                .filter(
-                        refType -> refType.getDataSource().equals(dataSource) && refType.getContentType().equals(contentType))
-                .collect(Collectors.toList());
+                .filter(refType -> refType.getDataSource().equals(dataSource) &&
+                        refType.getContentType().equals(contentType)).toList();
     }
 
-    /**
-     * Get a json object of each refType mapped to its refName
-     */
     public static String getRefJsonMap() {
-        return OutputUtils.toJson(EnumSet.allOf(SpotCheckRefType.class).stream()
-                .collect(Collectors.toMap(SpotCheckRefType::name, SpotCheckRefType::getRefName)));
+        return getJsonMapHelper(SpotCheckRefType::getRefName);
     }
 
-
-    /**
-     * Get a json object of each refType mapped to its display name
-     */
     public static String getDisplayJsonMap() {
-        return OutputUtils.toJson(EnumSet.allOf(SpotCheckRefType.class).stream()
-                .collect(Collectors.toMap(SpotCheckRefType::name, SpotCheckRefType::getDisplayName)));
+        return getJsonMapHelper(SpotCheckRefType::getDisplayName);
     }
 
     public static String getRefContentTypeJsonMap() {
-        return OutputUtils.toJson(EnumSet.allOf(SpotCheckRefType.class).stream()
-                .collect(Collectors.toMap(SpotCheckRefType::name, SpotCheckRefType::getContentType)));
+        return getJsonMapHelper(SpotCheckRefType::getContentType);
     }
 
-
+    /**
+     * Converts the set of enums into a Map from their name to some other field.
+     * @param function to specify the field to get.
+     * @return The Map as JSON.
+     */
+    private static String getJsonMapHelper(Function<SpotCheckRefType, ?> function) {
+        return OutputUtils.toJson(EnumSet.allOf(SpotCheckRefType.class).stream()
+                .collect(Collectors.toMap(SpotCheckRefType::name, function)));
+    }
 }
